--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -30,6 +30,7 @@ section>h2 {
     font-weight: bold;
     height: 45px;
     padding-top: 10px;
+    color: black;
 }
 
 section.Harry>h2 {
@@ -41,6 +42,7 @@ section.Hermione>h2 {
 }
 
 section.Ron>h2 {
+  
     background-color: #F6DDCC;
 }
 
